--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.1
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
