--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
   page_transition: ^2.0.9
+  flutter_quill: ^7.4.4
 
 dev_dependencies:
   flutter_test:
